@@ -247,3 +247,10 @@
 2011-12-19  Cedric Bail
 
 	* Check existence of group at compile time also.
+        
+2012-01-02 Carsten Haitzler (The Rasterman)
+
+        * Fix prototype for edje_object_part_text_cursor_content_get()
+          as it returned a strduped string and not an internal one, so
+          this just formalizes its existing behavior correctly.
+
